--- a/xss.yaml
+++ b/xss.yaml
@@ -2,4 +2,4 @@ swagger: '2.0'
 info:
   title: XSS test
   description: |
-    <img src="x" onerror="alert('XSS')"> <h1><font Color=red>Visit Our New WebSite </h1><h3><mark><a href="https://example.com">e x a m p l e . c o m </a></mark></h3>
+    <img src="x" onerror="alert('XSS')"> <h1><font Color=red>Visit Our New WebSite </h1><h3><mark><a href="https://example.com" onclick="alert('XSS')">e x a m p l e.com</a></mark></h3>
